rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_h_h235_2003_H235-SECURITY-MESSAGES.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_h_h235_2003_H235-SECURITY-MESSAGES.asn1
---
Error matching ASN syntax at while parsing:
     ╭─[line 221, column 2]
     │
     │ 
 221 │  CryptoToken ::= CHOICE { ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 222 │    cryptoEncryptedToken
 223 │      SEQUENCE-- General purpose/application specific token-- {tokenOID
 224 │                                                                 OBJECT
 225 │                                                                   IDENTIFIER,
 226 │                                                               token
 227 │                                                                 ENCRYPTED
 228 │                                                                   {EncodedGeneralToken}
 229 │    },
 230 │    cryptoSignedToken
 231 │      SEQUENCE-- General purpose/application specific token-- {tokenOID
 232 │                                                                 OBJECT
 233 │                                                                   IDENTIFIER,
 234 │                                                               token
 235 │                                                                 SIGNED
 236 │                                                                   {EncodedGeneralToken}
 237 │    },
 238 │    cryptoHashedToken
 239 │      SEQUENCE-- General purpose/application specific token-- {tokenOID
 240 │                                                                 OBJECT
 241 │                                                                   IDENTIFIER,
 242 │                                                               hashedVals
 243 │                                                                 ClearToken,
 244 │                                                               token
 245 │                                                                 HASHED
 246 │                                                                   {EncodedGeneralToken}
 247 │    },
 248 │    cryptoPwdEncr         ENCRYPTED{EncodedPwdCertToken},
 249 │    ...
 250 │  }
 252 │  -- These allow the passing of session keys within the H.245 OLC structure.
 253 │  -- They are encoded as standalone ASN.1 and based as an OCTET STRING within H.245
     │
─────╯
